CP30-45 - Adjusting mid-size mobile spacing to prevent content crashing with nav early

--- a/gatsby/src/modules/_global/scss/global.scss
+++ b/gatsby/src/modules/_global/scss/global.scss
@@ -70,7 +70,7 @@ body {
   }
 
   @include media-breakpoint-down(sm) {
-    width: calc(100% - 75px);
+    width: calc(100% - 120px);
     max-width: 100%;
   }
 }
