--- a/gatsby/src/modules/contact-cards/main.scss
+++ b/gatsby/src/modules/contact-cards/main.scss
@@ -31,6 +31,11 @@
       margin-bottom: 50px;
     }
 
+    @media screen and (max-width: 374px) {
+      width: 100vw;
+      margin-left: -72.5px; //60px nav + 12.5px container padding
+    }
+
 
     &-info {
       padding: 0;
