--- a/gatsby/src/modules/social-slider/main.scss
+++ b/gatsby/src/modules/social-slider/main.scss
@@ -4,10 +4,11 @@
 @import '../_global/scss/variables.scss';
 
 .juicer-container {
-  padding-left: 110px;
-
-  @include media-breakpoint-down(md) {
-    padding-left: 50px;
+  @include media-breakpoint-down(xs) {
+    width: 100vw;
+    max-width: none;
+    margin: 0;
+    padding: 0;
   }
 
   ul {
