--- a/gatsby/src/modules/stat-long-fact-row/main.scss
+++ b/gatsby/src/modules/stat-long-fact-row/main.scss
@@ -5,11 +5,11 @@
   padding: 75px 0;
   background-color: #fafafa;
 
-  .container {
-    @include media-breakpoint-down(sm) {
-      width: 100%;
-    }
-  }
+  // .container {
+  //   @include media-breakpoint-down(sm) {
+  //     width: 100%;
+  //   }
+  // }
 
   &__head {
     margin-bottom: 34px;
