--- a/gatsby/src/modules/stat-row/main.scss
+++ b/gatsby/src/modules/stat-row/main.scss
@@ -4,11 +4,11 @@
 .stat {
   padding: 110px 0 175px;
 
-  .container {
-    @include media-breakpoint-down(sm) {
-      width: 100%;
-    }
-  }
+  // .container {
+  //   @include media-breakpoint-down(sm) {
+  //     // width: 100%;
+  //   }
+  // }
 
   &__head {
     margin-bottom: 34px;
